<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/padding_16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_60dp"
                android:layout_height="@dimen/icon_size_60dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_32dp"
                android:src="@drawable/ic_wifi_off"
                tools:ignore="ContentDescription"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:textAppearance="@style/myapp.Text.RBlackChipsTitlte14Pt"
                android:text="@string/dialogNetworkConnection_network_disconnected"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/dialogNetworkConnection_check_your_internet"
                android:textAppearance="@style/myapp.Text.RBlackChipsTitlte14Pt"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_network_setting"
                android:layout_width="168dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:textAppearance="@style/myapp.Text.MWhitePrimaryButtom16Pt"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/dialogNetworkConnection_check_network_setting"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_wifi_setting"
                android:layout_width="168dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:textAppearance="@style/myapp.Text.MWhitePrimaryButtom16Pt"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/dialogNetworkConnection_check_wifi_setting"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_data_setting"
                android:layout_width="168dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:textAppearance="@style/myapp.Text.MWhitePrimaryButtom16Pt"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/dialogNetworkConnection_check_data_setting"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_close"
                android:layout_width="150dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:text="@string/dialogNetworkConnection_close"
                android:textAppearance="@style/myapp.Text.RGrayCaption14Pt"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/on_surface_60"
                android:layout_marginTop="@dimen/margin_16dp"
                tools:ignore="HardcodedText,RtlHardcoded,SpUsage"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>